--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
